@@ -1,3 +1,8 @@
+ORCJAVA-464
+===========
+
+  - Add possibility of ReadCommand implementations to define their polling interval (Marcus Redeker)
+
 Controller Pro 1.1.0
 ====================
 
